# anidex

./: Cargo.toml  README.md
src/: anilist.rs  compare.rs  config.rs  main.rs  mangadex.rs
